# gstlearn

./: .clang-format  .clang-tidy  .gitignore  .mailmap  .zenodo.json  CHANGES  CMakeLists.txt  Colored_Gibbs  Config.cmake.in  Db.Neutral  LICENSE  LICENSE.txt  Makefile  Model.Neutral  PGS-modelfitpgs1.ascii  PGS-modelfitpgs2.ascii  PGS-modelpgs.ascii  PGS-ruleFit.ascii  PGS-simupgs.ascii  PGS-truemodel1.ascii  PGS-truemodel2.ascii  PGS-varioindic.ascii  PGS-variopgs1.ascii  PGS-variopgs2.ascii  Polygon.Neutral  README.md  Vario.Neutral  bench_KrigingU.out  bench_NeighKNN.out  bench_VGrid.out  cachegrind.out.353966  callgrind.out.533745  callgrind.out.611486  callgrind.out.611487  callgrind.out.622389  callgrind.out.637313  cmake_uninstall.cmake.in  port_changes.csh  test_Limits.out  test_ModelFitting.out  (+4 more)
doc/courses/: 04_Variography.ipynb  CMakeLists.txt
doc/demo/: CMakeLists.txt  Point_Simulation.ipynb  Test_DDK.ipynb  Test_FaciesIndicators.ipynb
doxygen/: CMakeLists.txt  Doxyfile  Makefile
python/: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_ipynb_html.sh  clear_ipynb.sh  generated_python.i  numpy.i  pygstlearn.i  pyproject.toml.in  run_test.py  run_test_ipynb.py  run_test_py.py  setup.py.in  version.py.in
python/data/: TESTPGS-poly_LANU.ascii  poly_LANU.ascii
python/demo/: APISPDE.ipynb  DbNaming.ipynb  Halieutic.ipynb  Meshing.ipynb  PGS.ipynb  SPDEDrift.ipynb  Test_FaciesIndicators.ipynb  Test_Gradient.ipynb  Test_Model.ipynb  Test_VarioGrid.ipynb  Tests_SPDEMatrices.ipynb  Tutorial2D.ipynb  Tutorial_Graphics.ipynb  override.ipynb
python/doc/: doxy2swig.py
python/modules/: conv.py  document.py  gstmarimo.py  plot.py  plot2.py  plot3D.py  plot_OLD.py  proj.py  segy.py  test.py  widgets.py
python/tests/: display_file.py  draw_file.py  test_Arguments.py  test_GradientsShiftOp.py  test_Matrix.py  test_Override.py  test_Rotation.py  test_SPDEMatrices.py  test_dbBrackets.py
r/: CMakeLists.txt  DESCRIPTION.in  FindR.cmake  GetVersion.R  NAMESPACE.in  README.md  build_rmd_html.sh  generated_r.i  plot.r  rgstlearn.i  run_test_rmd.R
r/doc/: create_doc.R
r/modules/: auxiliary.R  complement_SVC.R  document.R  io.R  plot.R  plot3D.R  zzz.R
r/root/: FindR.cmake
src/: CMakeLists.txt  INIParser.cpp  Makefile  Style.cpp  all_sources.cmake
src/API/: BenchSPDE-Grid.ascii  PGSSPDE.cpp  SPDE.cpp  SPDEParam.cpp  Style.cpp  TestInheritance.cpp
src/Anamorphosis/: AAnam.cpp  Anam.cpp  AnamContinuous.cpp  AnamDiscrete.cpp  AnamDiscreteDD.cpp  AnamDiscreteIR.cpp  AnamEmpirical.cpp  AnamHermite.cpp  AnamUser.cpp  CalcAnamTransform.cpp  PPMT.cpp
src/Arrays/: AArray.cpp  Array.cpp  BImage.cpp  BImageStringFormat.cpp
src/Basic/: 2  AException.cpp  AFunction.cpp  AFunctional.cpp  ASerializable.cpp  AStringFormat.cpp  AStringable.cpp  AStringeable.cpp  ArgumentTest.cpp  Array.cpp  CSVformat.cpp  Convolution.cpp  DbgOpt.cpp  FFT.cpp  File.cpp  FunctionalSpirale.cpp  Geometry.cpp  GlobalEnvironment.cpp  Grid.cpp  GridC.cpp  HDF5format.cpp  Indirection.cpp  Interval.cpp  Law.cpp  Limits.cpp  Line2D.cpp  ListParams.cpp  MathFunc.cpp  Memory.cpp  NamingConvention.cpp  OptCst.cpp  OptCustom.cpp  OptDbg.cpp  Optim.cpp  ParamInfo.cpp  Plane.cpp  PolyLine2D.cpp  Rotation.cpp  SerializeNeutralFile.cpp  String.cpp  (+8 more)
src/Boolean/: AShape.cpp  AToken.cpp  ModelBoolean.cpp  Object.cpp  ObjectList.cpp  ShapeEllipsoid.cpp  ShapeHalfEllipsoid.cpp  ShapeHalfParaboloid.cpp  ShapeHalfSinusoid.cpp  ShapeParaboloid.cpp  ShapeParallelepiped.cpp  ShapeParameter.cpp  TokenEllipsoid.cpp  TokenHalfEllipsoid.cpp  TokenHalfParaboloid.cpp  TokenHalfSinusoid.cpp  TokenParaboloid.cpp  TokenParallelepiped.cpp  TokenParameter.cpp  Tokens.cpp
src/Calculators/: ACalcDb2Db.cpp  ACalcDbToDb.cpp  ACalcDbVarCreator.cpp  ACalcInterpolator.cpp  ACalculator.cpp  CalcGridToGrid.cpp  CalcMigrate.cpp  CalcSimuPost.cpp  CalcSimuPostDemo.cpp  CalcSimuPostPropByLayer.cpp  CalcStatistics.cpp  Result.out
src/Core/: Result.out  acknowledge.cpp  anam.cpp  ascii.cpp  bessel.cpp  cluster.cpp  convert.cpp  csparse.cpp  db.cpp  dbtools.cpp  eden.cpp  fft.cpp  foxleg.cpp  fracture.cpp  geophy.cpp  io.cpp  krige.cpp  law.cpp  license.cpp  math.cpp  matrix.cpp  memory.cpp  mlayers.cpp  model.cpp  model_auto.cpp  neigh.cpp  pile.cpp  poly.cpp  potential.cpp  pthread.cpp  segy.cpp  seismic.cpp  simbool.cpp  simfft.cpp  simfine.cpp  simpart.cpp  simsphe.cpp  simsub.cpp  simtub.cpp  skin.cpp  (+13 more)
src/Covariances/: ACor.cpp  ACov.cpp  ACovAnisoList.cpp  ACovFunc.cpp  ACovGradient.cpp  ACovOnSphere.cpp  ANoStat.cpp  ANoStatCov.cpp  CorAniso.cpp  CorGneiting.cpp  CorMatern.cpp  CovAniso.cpp  CovAnisoList.cpp  CovBase.cpp  CovBesselJ.cpp  CovBesselK.cpp  CovCalcMode.cpp  CovCauchy.cpp  CovContext.cpp  CovCosExp.cpp  CovCosinus.cpp  CovCubic.cpp  CovDiffusionAdvection.cpp  CovExponential.cpp  CovFactory.cpp  CovGC1.cpp  CovGC3.cpp  CovGC5.cpp  CovGCspline.cpp  CovGCspline2.cpp  CovGamma.cpp  CovGaussian.cpp  CovGeometric.cpp  CovGneiting.cpp  CovGradientFunctional.cpp  CovGradientNumerical.cpp  CovHelper.cpp  CovLMC.cpp  CovLMCAnamorphosis.cpp  CovLMCConvolution.cpp  (+31 more)
src/Db/: Db.cpp  DbGraphO.cpp  DbGrid.cpp  DbHelper.cpp  DbLine.cpp  DbMeshStandard.cpp  DbMeshTurbo.cpp  DbStringFormat.cpp  Dbgrid.cpp  PtrGeos.cpp  RankHandler.cpp
src/Drifts/: ADrift.cpp  ADriftElem.cpp  ADriftList.cpp  Drift1.cpp  DriftF.cpp  DriftFactory.cpp  DriftList.cpp  DriftM.cpp  DriftX.cpp  DriftX2.cpp  DriftX2Y.cpp  DriftX3.cpp  DriftXY.cpp  DriftXY2.cpp  DriftXZ.cpp  DriftY.cpp  DriftY2.cpp  DriftY3.cpp  DriftYZ.cpp  DriftZ.cpp  DriftZ2.cpp  DriftZ3.cpp
src/Enum/: AEnum.cpp  ENeigh.cpp  Enums.cpp
src/Estimation/: ALikelihood.cpp  AModelOptimFactory.cpp  CalcFactorKriging.cpp  CalcGlobal.cpp  CalcImage.cpp  CalcKriging.cpp  CalcKrigingFactors.cpp  CalcKrigingSimpleCase.cpp  CalcSimpleInterpolation.cpp  KrigOpt.cpp  KrigingAlgebra.cpp  KrigingAlgebraSimpleCase.cpp  KrigingCalcul.cpp  KrigingSystem.cpp  (+3 more)
swig/: CMakeLists.txt  classanalysis.py  macrogenerate.py  swig_exp.i  swig_inc.ext  swig_inc.i  toString.py
tests/: CMakeLists.txt  Makefile
(+2135 files in other folders)
